tried some spell checkers to correct misspellings and added code snippets

--- a/Assignment_2_SentimentAnalysis.ipynb
+++ b/Assignment_2_SentimentAnalysis.ipynb
@@ -419,7 +419,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "removing stop words :"
+        "spell checker : (still no good ones in libraries and will use a naive one or implement our own but not necessary now)\n",
+        "so I didn't do it to dataset until consulting others"
       ]
     },
     {
@@ -430,12 +431,130 @@
           "autoexec": {
             "startup": false,
             "wait_interval": 0
+          },
+          "output_extras": [
+            {
+              "item_id": 3
+            }
+          ],
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "3f2db328-399c-4c1b-e2e9-24897e3953df",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1522266725716,
+          "user_tz": -120,
+          "elapsed": 6472,
+          "user": {
+            "displayName": "Kareem Abdel Salam",
+            "photoUrl": "//lh5.googleusercontent.com/-FFkZs03hTYw/AAAAAAAAAAI/AAAAAAAAJYE/suktak0dYDI/s50-c-k-no/photo.jpg",
+            "userId": "111052780768832987513"
           }
         }
       },
       "cell_type": "code",
       "source": [
-        "#TODO"
+        "#TODO\n",
+        "!pip install -U textblob\n",
+        "!pip install -U autocorrect\n",
+        "from textblob import TextBlob\n",
+        "from autocorrect import spell\n"
+      ],
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already up-to-date: textblob in /usr/local/lib/python3.6/dist-packages\n",
+            "Requirement already up-to-date: nltk>=3.1 in /usr/local/lib/python3.6/dist-packages (from textblob)\n",
+            "Requirement already up-to-date: six in /usr/local/lib/python3.6/dist-packages (from nltk>=3.1->textblob)\n",
+            "Requirement already up-to-date: autocorrect in /usr/local/lib/python3.6/dist-packages\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BmsvbZkOIWGe",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
+          "output_extras": [
+            {
+              "item_id": 3
+            }
+          ],
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "3f807c1e-9b3c-4c53-bf41-26f45da4ad92",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1522267117710,
+          "user_tz": -120,
+          "elapsed": 6960,
+          "user": {
+            "displayName": "Kareem Abdel Salam",
+            "photoUrl": "//lh5.googleusercontent.com/-FFkZs03hTYw/AAAAAAAAAAI/AAAAAAAAJYE/suktak0dYDI/s50-c-k-no/photo.jpg",
+            "userId": "111052780768832987513"
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "blob = TextBlob('tihs assignmt si on itss tim excpt fr midtrms')\n",
+        "print(\"blob's:\")\n",
+        "print(blob.correct())\n",
+        "\n",
+        "x='tihs assignmt si on itss tim excpt fr midtrms'\n",
+        "print(\"autocorrect:\")\n",
+        "print(spell(x))\n",
+        "\n",
+        "#blob better and faster"
+      ],
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "blob's:\n",
+            "this assignat si on its tim except fr midtrms\n",
+            "autocorrect:\n",
+            "tihs assignmt si on itss tim excpt fr midtrms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fMCqWhPWMWsM",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "stop words removal (is,are,the,this ....etc) :"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ha9-sfEuMfiW",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
