spell checking discussion in notebook and that ends my day :D

--- a/Assignment_2_SentimentAnalysis.ipynb
+++ b/Assignment_2_SentimentAnalysis.ipynb
@@ -419,7 +419,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "spell checker : (still no good ones in libraries and will use a naive one or implement our own but not necessary now)\n",
+        "### spell checker : (still no good ones in libraries and will use a naive one or implement our own but not necessary now)\n",
         "so I didn't do it to dataset until consulting others"
       ]
     },
@@ -533,31 +533,62 @@
     },
     {
       "metadata": {
+        "id": "80f--1b-NaI8",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Zyad: why you think that we need spellchecking and autocorrection ? <TO:Karim> <Comment_to_be_removed>"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "VgBAlrFCNvVa",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Kareem: some words are misspelled in dataset from samples I opened and this will improve accuracy but not a necessary step\n",
+        "but as we are using google's GPUs I say we use text blob to correct words even if it is not perfect but it will improve accuracy \n",
+        "even though spell checking will not be a big boost especially for such a large data set"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "M0kZzV80N6Ca",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "what if we keep the words misspelled ?\n",
+        "\n",
+        "kareem :lets say the word great is misspelled \"gret\" then classifier won't recognize it while testing and will reduce its accuracy in detecting true sentiment\n",
+        "\n",
+        "zyad: it's a costly task. \n",
+        "\n",
+        "kareem: yes but we are using Google's GPUs xD\n",
+        "but yes priority now is lemmatization and stop words removal\n",
+        "\n",
+        "zyad: let us wait if acc. is not in the range desired then you may apply autocorrection!!!\n",
+        "\n",
+        "kareem: I agree, lets leave this thread for mahinour to read when she comes :D\n",
+        "\n",
+        "zyad: GOOD NIGTH :D\n",
+        "\n",
+        "Kareem: start with stop words removal first I will sleep now and removing those words will remove much of the cost of lematizing\n",
+        "\n",
+        "Good night :D"
+      ]
+    },
+    {
+      "metadata": {
         "id": "fMCqWhPWMWsM",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "stop words removal (is,are,the,this ....etc) :"
+        "## stop words removal (is,are,the,this ....etc) :"
       ]
-    },
-    {
-      "metadata": {
-        "id": "ha9-sfEuMfiW",
-        "colab_type": "code",
-        "colab": {
-          "autoexec": {
-            "startup": false,
-            "wait_interval": 0
-          }
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
