--- a/Assignment_2_SentimentAnalysis.ipynb
+++ b/Assignment_2_SentimentAnalysis.ipynb
@@ -503,6 +503,46 @@
     },
     {
       "metadata": {
+        "id": "jNFhRlSdblAn",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "pos_train_tokens=pos_reviews_train_list\n",
+        "neg_train_tokens=neg_reviews_train_list\n",
+        "pos_test_tokens=pos_reviews_test_list\n",
+        "neg_test_tokens=neg_reviews_test_list"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "tq5q4fFibk8C",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "fMCqWhPWMWsM",
         "colab_type": "text"
       },
@@ -697,7 +737,7 @@
       },
       "cell_type": "code",
       "source": [
-        "\n",
+        "'''\n",
         "pos_train_tokens=lemmatize_list(pos_train_tokens)\n",
         "print(\"lemmatizing 1st\")\n",
         "neg_train_tokens=lemmatize_list(neg_train_tokens)\n",
@@ -705,7 +745,8 @@
         "pos_test_tokens=lemmatize_list(pos_test_tokens)\n",
         "print(\"lemmatizing 3rd\")\n",
         "neg_test_tokens=lemmatize_list(neg_test_tokens)\n",
-        "print(\"lemmatizing 4th\")\n"
+        "print(\"lemmatizing 4th\")\n",
+        "'''"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1030,7 +1071,7 @@
       },
       "cell_type": "code",
       "source": [
-        "\n",
+        "'''\n",
         "!pip install -U gensim\n",
         "from gensim.models import Doc2Vec\n",
         "\n",
@@ -1054,7 +1095,8 @@
         "    \n",
         "model = doc2vec.Doc2Vec(docs , dm_concat=1, vector_size = 100, window = 300, negative=5, hs=0, min_count = 2, workers = cores)\n",
         "\n",
-        "print(docs)\n"
+        "print(docs)\n",
+        "'''\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1082,7 +1124,7 @@
       },
       "cell_type": "code",
       "source": [
-        "\n",
+        "'''\n",
         "from gensim.models import doc2vec\n",
         "from collections import namedtuple\n",
         "import random\n",
@@ -1106,7 +1148,7 @@
         "    #model.alpha -= 0.002 # decrease the learning rate\n",
         "    #model.min_alpha = model.alpha # fix the learning rate, no deca\n",
         "    #model.train(docs)\n",
-        "    \n"
+        "    '''\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1124,7 +1166,7 @@
       },
       "cell_type": "code",
       "source": [
-        "model.most_similar('comedy')"
+        "#model.most_similar('comedy')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1164,7 +1206,7 @@
       },
       "cell_type": "code",
       "source": [
-        "\n",
+        "'''\n",
         "# ZYAD STARTED HERE\n",
         "\n",
         "# not sure whether this step is valid or not:\n",
@@ -1178,7 +1220,8 @@
         "for i in range(25000):\n",
         "  label = 'test_%s' %i\n",
         "  train_vectors[i]=model[i]\n",
-        "  test_vectors[i]= model.infer_vector(word_tokenize(test_data[i]))"
+        "  test_vectors[i]= model.infer_vector(word_tokenize(test_data[i]))\n",
+        "  '''"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1403,7 +1446,33 @@
       "source": [
         "##logistic Regression\n",
         "from sklearn import linear_model, datasets\n",
-        "logreg = linear_model.LogisticRegression(C=0.00001)\n",
+        "logreg = linear_model.LogisticRegression(C=1000)\n",
+        "logreg.fit(train_vectors, train_labels)\n",
+        "prediction = logreg.predict(test_vectors)\n",
+        "# accuracy = getAccuracy(train_labels, prediction)\n",
+        "# print('Accuracy: ' + repr(accuracy) + '%')\n",
+        "\n",
+        "print(logreg.score(test_vectors,test_labels))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "nCN_15JlxrII",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "#tuning log reg\n",
+        "from sklearn import linear_model, datasets\n",
+        "logreg = linear_model.LogisticRegression(C=1000)\n",
         "logreg.fit(train_vectors, train_labels)\n",
         "prediction = logreg.predict(test_vectors)\n",
         "# accuracy = getAccuracy(train_labels, prediction)\n",
@@ -1427,6 +1496,7 @@
       },
       "cell_type": "code",
       "source": [
+        "'''\n",
         "from sklearn import linear_model, datasets\n",
         "from sklearn.model_selection import train_test_split, cross_val_score, cross_val_predict, GridSearchCV, StratifiedKFold\n",
         "from sklearn.metrics import roc_curve, precision_recall_curve, auc, make_scorer, recall_score, accuracy_score, precision_score, confusion_matrix\n",
@@ -1445,7 +1515,7 @@
         "grid_search_clf = grid_search_wrapper(refit_score='accuracy_score')\n",
         "grid_search_clf.fit(train_vectors, train_labels)\n",
         "print(grid_search_clf.score(test_vectors,test_labels))\n",
-        "\n"
+        "'''\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1459,6 +1529,29 @@
       "source": [
         ""
       ]
+    },
+    {
+      "metadata": {
+        "id": "2TjzAgKLo5jE",
+        "colab_type": "code",
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "### Naive-bayes\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "clfs = MultinomialNB()\n",
+        "clfs.fit(train_vectors, train_labels)\n",
+        "print(clfs.score(test_vectors,test_labels))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -1483,8 +1576,9 @@
         "\n",
         "param_grid = {\n",
         "   # 'min_samples_split': [1000,10000], \n",
-        "    'n_estimators' : [100,300],\n",
-        "    'max_depth': [10,30],\n",
+        "    #'n_estimators' : [100,300],\n",
+        "    'n_estimators' : [300,500],\n",
+        "    #'max_depth': [10,30],\n",
         "   # 'max_features': [10,20]\n",
         "}\n",
         "scorers = {\n",
@@ -1548,8 +1642,10 @@
         "\n",
         "param_grid = {\n",
         " \n",
-        "    'n_estimators' : [50,100,300,400],\n",
-        "    'learning_rate': [0.01,0.1,0.5,1],\n",
+        "    #'n_estimators' : [50,100,300,400],\n",
+        "    'n_estimators' : [50,400],\n",
+        "    #'learning_rate': [0.01,0.1,0.5,1],\n",
+        "    'learning_rate': [0.5,1],\n",
         " \n",
         "}\n",
         "scorers = {\n",
@@ -1647,47 +1743,6 @@
     },
     {
       "metadata": {
-        "id": "2TjzAgKLo5jE",
-        "colab_type": "code",
-        "colab": {
-          "autoexec": {
-            "startup": false,
-            "wait_interval": 0
-          }
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "### Naive-bayes\n",
-        "from sklearn.naive_bayes import MultinomialNB\n",
-        "clfs = MultinomialNB()\n",
-        "clfs.fit(train_vectors, train_labels)\n",
-        "print(clfs.score(test_vectors,test_labels))\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "uyFvAaR7pM3F",
-        "colab_type": "code",
-        "colab": {
-          "autoexec": {
-            "startup": false,
-            "wait_interval": 0
-          }
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "1vEnP6cVpscb",
         "colab_type": "code",
         "colab": {
@@ -1728,7 +1783,22 @@
         "\n",
         "without lemma and tuning :rand : 54% (100,300 estimators and 10 and 30 other )and adaboost 79.852%\n",
         "\n",
-        "with tuning: random forests : 85.5%\n"
+        "with tuning: random forests : 85.5%\n",
+        "\n",
+        "\n",
+        "without preprocessing at all expept html removal: NB 85.4% ,log reg 88.6% best c is 1000,adaboost 80.2%,without tunning any\n",
+        "with tuning : 83.6% rand forests\n",
+        "\n",
+        "with stop words removal and html only log reg 88.3%\n",
+        "without any prep : log reg 88.5%\n",
+        "\n",
+        "\n",
+        "without preprocessing but with n grams 1-3 : log reg :88.5%\n",
+        "\n",
+        "with html and lemmatization only: 88.624%\n",
+        "\n",
+        "with html ,stopwords and lemmatization : 88.3%\n",
+        "\n"
       ]
     }
   ]
